ros2_ws/log/build_2024-11-14_18-53-08/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/controller.py", line 94
    """
    ^
SyntaxError: unterminated triple-quoted string literal (detected at line 119)

